Dont hide the tooltip if cursor is moving towards the tooltip

It can be hard to reach the tooltip sometimes as the time limit is 100ms.

BUG: 492064